--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,4 +1,11 @@
 
-<app-title></app-title>
+<app-title title="Welcome!" paragraph="Cras ut viverra eros. 
+        Phasellus sollicitudin sapien id luctus tempor. 
+        Sed hend rerit inter dum sagittis. 
+        Donec nunc lacus, dapibus nec interdum eget, ultrices eget justo. 
+        Nam purus lacus, efficitur eget laoreet sed, finibus nec neque. 
+        Cras eget enim in diam dapibus sagittis. In massa est, 
+        dignissim in libero ac, fringilla ornare mi. 
+        Etiam interdum ligula purus."></app-title> 
 
 
