--- a/src/app/pages/page-components/title/title.component.html
+++ b/src/app/pages/page-components/title/title.component.html
@@ -4,14 +4,7 @@
 <div class="center-wrapper">
     <div class="box"></div>
     <div class="box">
-        <app-title-circle title="Welcome!" paragraph="Cras ut viverra eros. 
-        Phasellus sollicitudin sapien id luctus tempor. 
-        Sed hend rerit inter dum sagittis. 
-        Donec nunc lacus, dapibus nec interdum eget, ultrices eget justo. 
-        Nam purus lacus, efficitur eget laoreet sed, finibus nec neque. 
-        Cras eget enim in diam dapibus sagittis. In massa est, 
-        dignissim in libero ac, fringilla ornare mi. 
-        Etiam interdum ligula purus."></app-title-circle>
+        <app-title-circle title={{title}} paragraph={{paragraph}}></app-title-circle>
     </div>
     <div class="box"></div>
 </div>
