--- a/src/app/pages/page-components/title-circle/title-circle.component.html
+++ b/src/app/pages/page-components/title-circle/title-circle.component.html
@@ -1,5 +1,6 @@
 
 
-<span class="dot p-4">
+<span class="dot p-4" [ngStyle]="{'height':height}">
     <app-title-text title={{title}} paragraph={{paragraph}}></app-title-text>
 </span>
+
