--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 
 <app-navigation-bar></app-navigation-bar>
 
-<div class="half col">
+<div class="col">
   <router-outlet></router-outlet>
   <app-messages></app-messages>
 </div>
