--- a/src/app/pages/menu-page/menu-page.component.html
+++ b/src/app/pages/menu-page/menu-page.component.html
@@ -1,1 +1,85 @@
 <app-title title="Menu"></app-title> 
+
+<div class="container-fluid" style="background-color: rgb(44, 44, 44); width:100%">
+    <app-select-location></app-select-location>
+    <app-menu-item 
+        src="assets/images/pic1.jpg" 
+        name="Super Steak"
+        [price]="29.99"
+        description="
+            Super healthy good stuff. pellentesque enim. Aliquam tempor.Super healthy good stuff. 
+            pellentesque enim. Aliquam tempor.Super healthy good stuff. pellentesque enim. 
+            Aliquam tempor.Super healthy good stuff. pellentesque enim. Aliquam tempor.Super 
+            healthy good stuff. pellentesque enim. Aliquam tempor.Super healthy good stuff. 
+            pellentesque enim. Aliquam tempor.Super healthy good stuff. pellentesque enim. 
+            Aliquam tempor.">
+    </app-menu-item>
+    <app-menu-item 
+        src="assets/images/pic1.jpg" 
+        name="Super Steak"
+        [price]="29.99"
+        description="
+            Super healthy good stuff. pellentesque enim. Aliquam tempor.Super healthy good stuff. 
+            pellentesque enim. Aliquam tempor.Super healthy good stuff. pellentesque enim. 
+            Aliquam tempor.Super healthy good stuff. pellentesque enim. Aliquam tempor.Super 
+            healthy good stuff. pellentesque enim. Aliquam tempor.Super healthy good stuff. 
+            pellentesque enim. Aliquam tempor.Super healthy good stuff. pellentesque enim. 
+            Aliquam tempor.">
+    </app-menu-item>
+    <app-menu-item 
+        src="assets/images/pic1.jpg" 
+        name="Super Steak"
+        [price]="29.99"
+        description="
+            Super healthy good stuff. pellentesque enim. Aliquam tempor.Super healthy good stuff. 
+            pellentesque enim. Aliquam tempor.Super healthy good stuff. pellentesque enim. 
+            Aliquam tempor.Super healthy good stuff. pellentesque enim. Aliquam tempor.Super 
+            healthy good stuff. pellentesque enim. Aliquam tempor.Super healthy good stuff. 
+            pellentesque enim. Aliquam tempor.Super healthy good stuff. pellentesque enim. 
+            Aliquam tempor.">
+    </app-menu-item>
+    <app-menu-item 
+        src="assets/images/pic1.jpg" 
+        name="Super Steak"
+        [price]="29.99"
+        description="
+            Super healthy good stuff. pellentesque enim. Aliquam tempor.Super healthy good stuff. 
+            pellentesque enim. Aliquam tempor.Super healthy good stuff. pellentesque enim. 
+            Aliquam tempor.Super healthy good stuff. pellentesque enim. Aliquam tempor.Super 
+            healthy good stuff. pellentesque enim. Aliquam tempor.Super healthy good stuff. 
+            pellentesque enim. Aliquam tempor.Super healthy good stuff. pellentesque enim. 
+            Aliquam tempor.">
+    </app-menu-item>
+    <app-menu-item 
+        src="assets/images/pic1.jpg" 
+        name="Super Steak"
+        [price]="29.99"
+        description="
+            Super healthy good stuff. pellentesque enim. Aliquam tempor.Super healthy good stuff. 
+            pellentesque enim. Aliquam tempor.Super healthy good stuff. pellentesque enim. 
+            Aliquam tempor.Super healthy good stuff. pellentesque enim. Aliquam tempor.Super 
+            healthy good stuff. pellentesque enim. Aliquam tempor.Super healthy good stuff. 
+            pellentesque enim. Aliquam tempor.Super healthy good stuff. pellentesque enim. 
+            Aliquam tempor.">
+    </app-menu-item>
+    <app-menu-item 
+        src="assets/images/pic1.jpg" 
+        name="Super Steak"
+        [price]="29.99"
+        description="
+            Super healthy good stuff. pellentesque enim. Aliquam tempor.Super healthy good stuff. 
+            pellentesque enim. Aliquam tempor.Super healthy good stuff. pellentesque enim. 
+            Aliquam tempor.Super healthy good stuff. pellentesque enim. Aliquam tempor.Super 
+            healthy good stuff. pellentesque enim. Aliquam tempor.Super healthy good stuff. 
+            pellentesque enim. Aliquam tempor.Super healthy good stuff. pellentesque enim. 
+            Aliquam tempor.">
+    </app-menu-item>
+    <app-contact
+    [imageLeft]="true"
+    src="assets/images/pic1.jpg" 
+    title="Contact Us" 
+    phone="+1 224 6787 004"
+    hqLocation="28 Seventh Avenue, Neew York, 10014"
+    email="support@restaurant.com"
+    logoSrc="assets/images/S4small.PNG"></app-contact>
+</div>
