--- a/src/app/pages/page-components/title/title.component.scss
+++ b/src/app/pages/page-components/title/title.component.scss
@@ -1,20 +1,24 @@
 
-@media screen and (min-width: 440px){
+*{
+    margin-bottom: 10vh;
+}
+
+@media screen and (min-width: 710px){
     img{
         left: -10vw;
         width: 120vw;
         filter: brightness(30%);
         position: absolute;
-        z-index: -1;
+        z-index: -60;
     }
 }
 
-@media screen and (max-width: 440px){
+@media screen and (max-width: 710px){
     img{
         height: 100vh;
         filter: brightness(16%);
         position: absolute;
-        z-index: -1;
+        z-index: -60;
     }
 }
 
@@ -35,4 +39,6 @@
 .box {
     background-color:  #FFFFFF00;
 }
+
+
 
