--- a/src/app/pages/page-components/title-circle/title-circle.component.scss
+++ b/src/app/pages/page-components/title-circle/title-circle.component.scss
@@ -1,9 +1,16 @@
 
+$total-height: 50vw;
+
+:host {
+  color: var(--color);
+}
+
 @media screen and (min-width: 600px){
   .dot {
+      --verticalPercentage: 1.0;
       background-color: #00000088;
       border-radius: 50%;
-      height:50vw;
+      height: calc(var(--verticalPercentage) * #{$total-height});
       width:50vw;
       margin-top: 5vw;
       text-align: center;
