--- a/src/app/pages/page-components/title/title.component.html
+++ b/src/app/pages/page-components/title/title.component.html
@@ -1,7 +1,7 @@
 
 <img src="assets/images/blue.jpg" />
 
-<div class="center-wrapper">
+<div class="center-wrapper back">
     <div class="box"></div>
     <div class="box">
         <app-title-circle title={{title}} paragraph={{paragraph}}></app-title-circle>
